platform/argocd/foundations/afc476f7-9098-49ae-97c7-dec39714ebec.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc324-qualification-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: afc476f7-9098-49ae-97c7-dec39714ebec
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 9ed18608-909c-4577-9d67-0e890db8e079
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc324-qualification-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: afc476f7-9098-49ae-97c7-dec39714ebec
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 9ed18608-909c-4577-9d67-0e890db8e079
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc324-qualification-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: afc476f7-9098-49ae-97c7-dec39714ebec
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 9ed18608-909c-4577-9d67-0e890db8e079
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
